Fixed distorted foggy displaying

--- a/src/styles/fog.css
+++ b/src/styles/fog.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100dvh;
+  width: '100%';
   height: 100dvh;
   overflow: hidden;
   pointer-events: none;
